# altheia-program

./: .gitignore  Anchor.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
migrations/: deploy.ts
programs/identity/: Cargo.toml
programs/identity/src/: lib.rs
tests/: identity.ts
